fix: z-index bug on mobile nav

--- a/app/styles/nav.module.css
+++ b/app/styles/nav.module.css
@@ -19,7 +19,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5); /* set a semi-transparent background color */
-    z-index: -1; /* set z-index to -1 to be below the .nav */
+    z-index: 1; /* set z-index to -1 to be below the .nav */
   }
 
   .slideDown {
@@ -27,7 +27,7 @@
     transform: translateX(0px);
     background-color: var(--very-light-gray);
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 95px;
     right: -35px;
   }
